make a streamlit app

--- a/notebook/SimpleRNN.ipynb
+++ b/notebook/SimpleRNN.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "e1063f5c",
+   "id": "1871ca37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0ac57b19",
+   "id": "4866301c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e60800b4",
+   "id": "f21a1219",
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bbf0c3ff",
+   "id": "89588702",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1b618b69",
+   "id": "12e41490",
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "9d188a41",
+   "id": "0332f401",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "36d4a6ed",
+   "id": "43231d9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "f56ff9cb",
+   "id": "673368d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "dbd6c9a6",
+   "id": "f4ea1c84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "bb6a2aab",
+   "id": "2ae4415e",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "f92279a0",
+   "id": "600d1977",
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1391,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "646ca78f",
+   "id": "04087d33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1401,7 +1401,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "d7d5ecd9",
+   "id": "50caf566",
    "metadata": {},
    "outputs": [
     {
@@ -2422,7 +2422,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "d8476b2c",
+   "id": "12f07a71",
    "metadata": {},
    "outputs": [
     {
@@ -2444,7 +2444,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "18a62f9b",
+   "id": "fc13ad93",
    "metadata": {},
    "outputs": [
     {
@@ -2477,7 +2477,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "d75ed544",
+   "id": "55a0cb6d",
    "metadata": {},
    "outputs": [
     {
@@ -2501,7 +2501,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "9bc37f85",
+   "id": "dacf02c1",
    "metadata": {},
    "outputs": [
     {
@@ -2593,7 +2593,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "efc20b11",
+   "id": "c2f69493",
    "metadata": {},
    "outputs": [
     {
@@ -2618,7 +2618,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "12c1d092",
+   "id": "7b73b4a9",
    "metadata": {},
    "outputs": [
     {
@@ -2650,7 +2650,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "e42f83c9",
+   "id": "aa7f15af",
    "metadata": {},
    "outputs": [
     {
@@ -2670,7 +2670,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "2cdeb07b",
+   "id": "ddb56cfd",
    "metadata": {},
    "outputs": [
     {
@@ -2689,7 +2689,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "2eb7e535",
+   "id": "a5c8a3d8",
    "metadata": {},
    "outputs": [
     {
@@ -2870,7 +2870,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "fb88aa82",
+   "id": "b1d9613a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2880,7 +2880,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "1b58c6cd",
+   "id": "f67c920b",
    "metadata": {},
    "outputs": [
     {
@@ -2897,8 +2897,222 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "id": "8174385e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[-0.51015115,  0.5024898 ,  0.45224398, ...,  0.38326487,\n",
+       "         -0.4747843 , -0.450653  ],\n",
+       "        [-0.02985881,  0.03889531,  0.07194185, ...,  0.04014549,\n",
+       "         -0.01005687, -0.06219048],\n",
+       "        [-0.09691091,  0.05629569,  0.02852567, ..., -0.01224174,\n",
+       "         -0.13913791, -0.11850036],\n",
+       "        ...,\n",
+       "        [ 0.05646317, -0.0768584 ,  0.04676282, ..., -0.12307648,\n",
+       "         -0.17027803, -0.05628081],\n",
+       "        [ 0.04572385,  0.08245201,  0.01923796, ...,  0.08587131,\n",
+       "          0.08447164,  0.03871165],\n",
+       "        [ 0.09759479, -0.02009236, -0.02947289, ...,  0.0723657 ,\n",
+       "          0.08687394,  0.13707474]], dtype=float32),\n",
+       " array([[-0.07167351,  0.04414433,  0.09500309, ...,  0.09755179,\n",
+       "          0.06756733,  0.03125929],\n",
+       "        [ 0.00126416,  0.05131729,  0.08120389, ..., -0.10475292,\n",
+       "         -0.01732457, -0.07928672],\n",
+       "        [ 0.04407645,  0.1198362 , -0.13688645, ..., -0.15464392,\n",
+       "         -0.02154113,  0.07354172],\n",
+       "        ...,\n",
+       "        [ 0.11754108, -0.04353411, -0.04731059, ..., -0.16967061,\n",
+       "          0.03452644,  0.11200427],\n",
+       "        [ 0.1595351 ,  0.11621278, -0.11700142, ...,  0.08874333,\n",
+       "         -0.09765226, -0.02313575],\n",
+       "        [-0.01480037,  0.04835303, -0.03586434, ..., -0.05093067,\n",
+       "         -0.16527212,  0.14832613]], dtype=float32),\n",
+       " array([[-0.03648537,  0.11141848,  0.11966043, ...,  0.02679381,\n",
+       "          0.08421975,  0.14960012],\n",
+       "        [ 0.15653387,  0.06292006,  0.15446885, ..., -0.03675346,\n",
+       "         -0.08128827, -0.08430693],\n",
+       "        [-0.17588314,  0.12082712,  0.14459604, ..., -0.02709544,\n",
+       "          0.14642453,  0.00338023],\n",
+       "        ...,\n",
+       "        [-0.04625525,  0.06499363, -0.02982024, ...,  0.10328577,\n",
+       "         -0.12605552, -0.13993931],\n",
+       "        [-0.00218398, -0.17114559,  0.01588119, ..., -0.02754941,\n",
+       "         -0.03663324, -0.05930278],\n",
+       "        [ 0.1859505 ,  0.13678299,  0.06063969, ..., -0.02196792,\n",
+       "         -0.04057672,  0.04455069]], dtype=float32),\n",
+       " array([-0.02458552, -0.03418752,  0.00592443, -0.04907522, -0.03320581,\n",
+       "         0.05699298, -0.03484745, -0.02427373,  0.00364204, -0.01326207,\n",
+       "        -0.05842373,  0.01311209, -0.03586913, -0.00192278, -0.0108152 ,\n",
+       "         0.0288487 ,  0.02695973, -0.0414793 ,  0.01567792, -0.02984239,\n",
+       "         0.00580898, -0.02725532,  0.05579772, -0.00846852, -0.02342428,\n",
+       "        -0.02903211,  0.00577645, -0.01521943, -0.01269076, -0.02803284,\n",
+       "        -0.00944897,  0.00121314, -0.02531382, -0.01794604,  0.04881384,\n",
+       "        -0.01922304, -0.03657528,  0.05892068,  0.00642583,  0.03700377,\n",
+       "         0.01172629,  0.03819199, -0.00019866, -0.03643405, -0.03655021,\n",
+       "        -0.03450831,  0.05197283, -0.02215012,  0.00465487,  0.01084512,\n",
+       "        -0.06989242, -0.05247859, -0.00292267,  0.04902329,  0.00909781,\n",
+       "         0.0072858 , -0.00279287, -0.01687442, -0.01609693, -0.04405186,\n",
+       "        -0.02893493, -0.00079073,  0.03543855, -0.02548219, -0.01419078,\n",
+       "        -0.04201805, -0.0494061 ,  0.03561531, -0.04913659, -0.04449994,\n",
+       "         0.00351719, -0.03067485,  0.02729484,  0.01187718, -0.015534  ,\n",
+       "        -0.00598123,  0.00032511, -0.02516368, -0.00574478,  0.00337457,\n",
+       "        -0.02985284, -0.04140207, -0.02318902,  0.0472963 , -0.03499368,\n",
+       "         0.01355476, -0.01586158,  0.04742873,  0.03926262,  0.03861097,\n",
+       "        -0.03544396, -0.02349637, -0.00522339,  0.04355943,  0.06489073,\n",
+       "        -0.02868787, -0.01028878, -0.02388273, -0.01092779, -0.04154465,\n",
+       "         0.00335202, -0.01213122,  0.01985718, -0.02056436, -0.03206184,\n",
+       "        -0.0281026 , -0.02118662, -0.0252374 , -0.0291048 , -0.01344279,\n",
+       "        -0.01926664,  0.00220923,  0.01207807,  0.04809329, -0.00338264,\n",
+       "        -0.03694927, -0.01123004, -0.01350096,  0.00020446, -0.01011322,\n",
+       "         0.04081745, -0.0448403 , -0.02683378, -0.01271233, -0.00448408,\n",
+       "         0.01428978,  0.00047521, -0.02162024], dtype=float32),\n",
+       " array([[-0.03797498],\n",
+       "        [-0.08258554],\n",
+       "        [ 0.02923367],\n",
+       "        [ 0.07618257],\n",
+       "        [ 0.10334645],\n",
+       "        [ 0.00169324],\n",
+       "        [ 0.00233562],\n",
+       "        [ 0.1565349 ],\n",
+       "        [ 0.07971589],\n",
+       "        [ 0.0276818 ],\n",
+       "        [-0.31051612],\n",
+       "        [-0.0767656 ],\n",
+       "        [-0.09876515],\n",
+       "        [-0.17363194],\n",
+       "        [ 0.24513958],\n",
+       "        [ 0.09587828],\n",
+       "        [ 0.10289513],\n",
+       "        [-0.07539392],\n",
+       "        [ 0.10797428],\n",
+       "        [-0.15256883],\n",
+       "        [-0.0071122 ],\n",
+       "        [ 0.18068634],\n",
+       "        [-0.09503279],\n",
+       "        [-0.13622142],\n",
+       "        [ 0.05689488],\n",
+       "        [-0.19468027],\n",
+       "        [-0.14723262],\n",
+       "        [ 0.02267669],\n",
+       "        [-0.08586267],\n",
+       "        [-0.19262162],\n",
+       "        [ 0.06372424],\n",
+       "        [ 0.1016946 ],\n",
+       "        [ 0.18459277],\n",
+       "        [ 0.01185198],\n",
+       "        [-0.20304167],\n",
+       "        [-0.07343679],\n",
+       "        [-0.0781862 ],\n",
+       "        [-0.01984382],\n",
+       "        [-0.14756204],\n",
+       "        [ 0.2526255 ],\n",
+       "        [-0.11509509],\n",
+       "        [-0.26795763],\n",
+       "        [ 0.16332555],\n",
+       "        [ 0.07873578],\n",
+       "        [ 0.08716431],\n",
+       "        [-0.12536417],\n",
+       "        [ 0.20479724],\n",
+       "        [ 0.08694638],\n",
+       "        [-0.14309408],\n",
+       "        [ 0.13214785],\n",
+       "        [-0.09581392],\n",
+       "        [-0.21556678],\n",
+       "        [-0.09892903],\n",
+       "        [-0.30223924],\n",
+       "        [-0.18187287],\n",
+       "        [ 0.05346279],\n",
+       "        [ 0.13741942],\n",
+       "        [-0.09743847],\n",
+       "        [ 0.01324399],\n",
+       "        [ 0.09145454],\n",
+       "        [ 0.19075213],\n",
+       "        [-0.10779482],\n",
+       "        [-0.15353455],\n",
+       "        [-0.11482231],\n",
+       "        [-0.10770006],\n",
+       "        [ 0.09770399],\n",
+       "        [ 0.10723317],\n",
+       "        [ 0.2196767 ],\n",
+       "        [ 0.3914272 ],\n",
+       "        [ 0.18453418],\n",
+       "        [ 0.05300391],\n",
+       "        [-0.16758993],\n",
+       "        [-0.19043529],\n",
+       "        [-0.09701338],\n",
+       "        [ 0.27197805],\n",
+       "        [ 0.04186559],\n",
+       "        [-0.18438283],\n",
+       "        [-0.23851766],\n",
+       "        [-0.19256888],\n",
+       "        [-0.19721486],\n",
+       "        [-0.04374686],\n",
+       "        [-0.12202908],\n",
+       "        [-0.1759006 ],\n",
+       "        [ 0.14702839],\n",
+       "        [-0.02339134],\n",
+       "        [-0.10436693],\n",
+       "        [-0.03890641],\n",
+       "        [ 0.24542263],\n",
+       "        [-0.06161017],\n",
+       "        [ 0.17491265],\n",
+       "        [ 0.02669338],\n",
+       "        [-0.13041918],\n",
+       "        [ 0.04074207],\n",
+       "        [ 0.17941374],\n",
+       "        [-0.37095743],\n",
+       "        [-0.1469797 ],\n",
+       "        [-0.17663561],\n",
+       "        [ 0.18416701],\n",
+       "        [-0.09421543],\n",
+       "        [-0.13159457],\n",
+       "        [-0.01000146],\n",
+       "        [ 0.09369253],\n",
+       "        [-0.09581395],\n",
+       "        [-0.10633584],\n",
+       "        [ 0.5213183 ],\n",
+       "        [-0.01663756],\n",
+       "        [ 0.4727482 ],\n",
+       "        [ 0.00688844],\n",
+       "        [ 0.13611253],\n",
+       "        [-0.20738004],\n",
+       "        [ 0.05546711],\n",
+       "        [ 0.1836033 ],\n",
+       "        [-0.21286367],\n",
+       "        [-0.16398306],\n",
+       "        [ 0.23810066],\n",
+       "        [-0.00136502],\n",
+       "        [-0.04632384],\n",
+       "        [ 0.13229032],\n",
+       "        [ 0.12459795],\n",
+       "        [-0.12312609],\n",
+       "        [-0.1534215 ],\n",
+       "        [-0.09993041],\n",
+       "        [-0.02033405],\n",
+       "        [ 0.0869066 ],\n",
+       "        [-0.1496982 ],\n",
+       "        [-0.13351   ],\n",
+       "        [ 0.31123126],\n",
+       "        [ 0.31186265]], dtype=float32),\n",
+       " array([-0.9855002], dtype=float32)]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_model.get_weights()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c5eb5260",
+   "id": "6036f84f",
    "metadata": {},
    "outputs": [],
    "source": []
